--- a/finalproject/app/src/main/AndroidManifest.xml
+++ b/finalproject/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="co.com.mycompany.myapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".GitHubApp"
         android:allowBackup="true"
